# Vectorization-on-BAN-library-for-ARM-SVE-and-NEC-AURORA

./: README.md
Vectorization on NEC/: CMakeLists.txt  Makefile  README.md  a.out  test  test.cpp
Vectorization on NEC/apps/: CMakeLists.txt  Makefile  cmake_install.cmake
Vectorization on NEC/apps/na_simplex/: Makefile  cmake_install.cmake  run_simplex  run_simplex.cpp  run_simplexv  validate_simplex
Vectorization on NEC/apps/na_simplex/src/: NA_Simplex_full_purpose.cpp  NA_Simplex_validate.cpp  constraints.nb
Vectorization on NEC/examples/: CMakeLists.txt
Vectorization on NEC/include/cppban/: ban.h  banintrin.h  banintrinNEC.h
Vectorization on NEC/src/: CMakeLists.txt  Makefile  ban.cpp  banv.cpp
Vectorization on SVE/: CMakeLists.txt  a.out  output  test.cpp  test2.cpp
Vectorization on SVE/apps/na_simplex/: CMakeLists.txt  Makefile  run_simplex  validate_simplex
Vectorization on SVE/apps/na_simplex/include/: NA_Simplex.h
Vectorization on SVE/apps/na_simplex/src/: NA_Simplex.cpp
Vectorization on SVE/examples/: basic.cpp
Vectorization on SVE/include/cppban/: ban.h  banintrinSVE.h
Vectorization on SVE/scripts/: plotTimes.m  readTimes.m
Vectorization on SVE/src/: CMakeLists.txt  ban.cpp  banv.cpp
